Mission layout is no longer terrible on mobile

--- a/src/components/MissionHeader/missionheader.module.scss
+++ b/src/components/MissionHeader/missionheader.module.scss
@@ -1,29 +1,22 @@
+@import '../../styles/vars';
 @import '../../styles/colors';
 
 .header {
     position: relative;
     z-index: 3;
     text-shadow: 1px 1px 0 $black, 0 0 40px rgba(0,0,0,0.6);
+    margin-right: -#{$spacing-5};
 }
 
 .content {
-    // left: calc((5vw + 6px) * -1)
+    background-color: rgba($black,0.5);
+    border-left: 10px solid $teal;
+    padding-left: $spacing-5;
 
     > *, 
     &:after {
-        grid-row: row 1;
         z-index: 1;
         padding: 20px 0;
-    }
-
-    &:after {
-        display: block;
-        content: "";
-        grid-column: 2 / 6;
-        background-color: rgba($black,0.5);
-        // backdrop-filter: blur(3px);
-        border-left: 10px solid $teal;
-        z-index: 0;
     }
 }
 
@@ -49,6 +42,35 @@
     text-decoration: none;
     
     &, & svg {
-        width: 145px;
+        width: 80px;
+    }
+}
+
+
+@media screen and (min-width: 767px) {
+    .content {
+        background-color: transparent;
+        border-left: none;
+        padding: 0;
+        
+        > *, 
+        &:after {
+            grid-row: row 1;
+        }
+    
+        &:after {
+            display: block;
+            content: "";
+            grid-column: 2 / 6;
+            background-color: rgba($black,0.5);
+            border-left: 10px solid $teal;
+            z-index: 0;
+        }
+    }
+
+    .ecLink {
+        &, & svg {
+            width: 145px;
+        }
     }
 }
