--- a/src/templates/mission.module.scss
+++ b/src/templates/mission.module.scss
@@ -4,12 +4,11 @@
 .mission {
     position: relative;
     z-index: 1;
-    padding-top: 25vh;
-    background-image: linear-gradient(to bottom, transparent 25vh, $black 75vh);
-    margin-left: -#{$spacing-10};
-    margin-right: -#{$spacing-10};
-    margin-bottom: -#{$spacing-10};
-    padding-bottom: $spacing-10;
+    margin-top: -#{$spacing-3};
+    margin-left: -#{$spacing-5};
+    margin-right: -#{$spacing-5};
+    padding: 10vh $spacing-5;
+    background-image: linear-gradient(to bottom, transparent 10vh, $black 50vh);
 
     &:after {
         position: absolute;
@@ -31,54 +30,48 @@
     h2 + ul {
         margin-top: 0;
     }
+}
 
-    @media (min-width: 769px) {
-        .descAndReviews {
-            grid-column: 3 / 4;
-        }
+.download {
+    display: block;
+    margin-top: 20px;
+    margin-left: 20px;
+    color: white;
+    font-size: 14px;
+    text-decoration: none;
 
-        .plot {
-            color: $gold;
-        }
-    }
-
-    .download {
+    strong {
+        font-size: 20px;
+        color: $teal;
+        text-decoration: underline;
         display: block;
-        margin-top: 20px;
-        margin-left: 20px;
-        color: white;
+        line-height: 1.2;
+        margin-bottom: 0.2em;
+    }
+}
+
+.missingFile {
+    margin-left: 20px;
+    margin-top: 20px;
+
+    strong {
+        color: $red;
+        text-transform: uppercase;
+    }
+
+    p {
+        margin-top: 0;
+        line-height: 1.4;
         font-size: 14px;
-        text-decoration: none;
-
-        strong {
-            font-size: 20px;
-            color: $teal;
-            text-decoration: underline;
-            display: block;
-            line-height: 1.2;
-            margin-bottom: 0.2em;
-        }
     }
 
-    .missingFile {
-        margin-left: 20px;
-        margin-top: 20px;
-
-        strong {
-            color: $red;
-            text-transform: uppercase;
-        }
-
-        p {
-            margin-top: 0;
-            line-height: 1.4;
-            font-size: 14px;
-        }
-
-        a {
-            display: block;
-        }
+    a {
+        display: block;
     }
+}
+
+.plot {
+    color: $gold;
 }
 
 .coverImage {
@@ -87,10 +80,26 @@
     left: 0;
     right: 0;
     height: 100vh;
+    z-index: -1;
     image-rendering: pixelated;
     background-position: bottom;
     background-color: $teal;
     background-size: cover;
     background-blend-mode: multiply;
     opacity: 0.5;
+}
+
+@media screen and (min-width: 767px) {
+    .mission {
+        margin-left: -#{$spacing-10};
+        margin-right: -#{$spacing-10};
+        margin-bottom: -#{$spacing-10};
+        padding-top: 25vh;
+        padding-bottom: $spacing-10;
+        background-image: linear-gradient(to bottom, transparent 25vh, $black 75vh);
+    }
+
+    .descAndReviews {
+        grid-column: 3 / 4;
+    }
 }
